--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -8,15 +8,14 @@
     android:padding="10dp"
     tools:context=".UpdateActivity">
 
+
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <EditText
             android:id="@+id/editTextid"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Id"
-            android:inputType="textCapWords"/>
+            android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
