--- a/app/src/main/res/layout/recyclerview_kecamatan.xml
+++ b/app/src/main/res/layout/recyclerview_kecamatan.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -23,16 +22,15 @@
             android:padding="5dp">
 
             <TextView
-                android:id="@+id/txtid"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
-
-            <TextView
-                android:id="@+id/txtKabupaten"
+                android:id="@+id/txtKabupatenn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />
+            <TextView
+                android:id="@+id/txtKecamatan"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
 
         </LinearLayout>
