--- a/app/src/main/res/layout/activity_add_kecamatan.xml
+++ b/app/src/main/res/layout/activity_add_kecamatan.xml
@@ -32,7 +32,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:hint="Masukkan Kecamatan"/>
+        android:hint="Masukkan Kecamatan"
+        android:inputType="textCapWords"/>
 
     <Button
         android:id="@+id/btnSimpanKec"
