--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,13 @@
         android:text="Lihat Kelurahan/Desa"/>
 
     <Button
+        android:id="@+id/btn_tambah_latlng"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Tambah Latlng"/>
+
+    <Button
         android:id="@+id/btn_lihat_latlng"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
