--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,12 +82,12 @@
         android:layout_marginTop="10dp"
         android:text="Lihat Latlng"/>
 
-    <Button
-        android:id="@+id/btn_polygon_demo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Polygon Demo"/>
+    <!--<Button-->
+        <!--android:id="@+id/btn_polygon_demo"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:text="Polygon Demo"/>-->
 
     <Button
         android:id="@+id/btn_Circle_demo"
@@ -102,6 +102,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="Add Mahasiswa"/>
+
+    <Button
+        android:id="@+id/btn_read_mahasiswa"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Read Mahasiswa"/>
 
 </LinearLayout>
 </ScrollView>
